--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         const config = {
             apiBase: 'https://api.github.com',
             itemsPerPage: 100,
-            token: 'your_token', // Replace with your GitHub access token
+            token: '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', // Replace with your GitHub access token
             errorMessages: {
                 rateLimit: 'GitHub API rate limit exceeded. Please try again later.',
                 auth: 'Authentication failed. Please check your token.',
